navbar styline and home page hero

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="w-full mx-auto flex">
       <%= yield %>
     </main>
   </body>
