--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,14 @@
-<div>
-  <h1 class="text-green-500">Pages#home</h1>
-  <p>Find me in app/views/pages/home.html.erb</p>
+<div
+  class="hero h-screen bg-cover bg-center bg-no-repeat"
+  style="background-image: url('<%= image_path('hero-image.jpg') %>')">
+  <div class="hero-overlay"></div>
+  <div class="hero-content text-neutral-content text-center">
+    <div class="max-w-md">
+      <h1 class="mb-5 text-5xl font-bold">From Idea to Arrangement. Effortlessly.</h1>
+      <p class="mb-5">
+        Instantly generate song arrangements tailored to your sound so you can create more finished tracks.
+      </p>
+      <button class="btn btn-primary">Get Started</button>
+    </div>
+  </div>
 </div>
