--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,19 +1,11 @@
-<div class="navbar bg-base-100 shadow-sm">
+<div class="navbar fixed top-0 left-0bg-base-100">
   <div class="flex-1">
-    <a class="btn btn-ghost text-xl">daisyUI</a>
+    <a class="btn btn-ghost text-xl text-white">Music Template</a>
   </div>
   <div class="flex-none">
     <ul class="menu menu-horizontal px-1">
-      <li><a>Link</a></li>
-      <li>
-        <details>
-          <summary>Parent</summary>
-          <ul class="bg-base-100 rounded-t-none p-2">
-            <li><a>Link 1</a></li>
-            <li><a>Link 2</a></li>
-          </ul>
-        </details>
-      </li>
+      <li><a class="btn btn-outline text-white mx-3 hover:text-primary">Login</a></li>
+      <li><a class= "btn btn-primary border-none">Sign Up</a></li>
     </ul>
   </div>
 </div>
