--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,32 @@
-<h2>Sign up</h2>
+<div class="container mx-auto min-h-screen flex p-10 justify-center">
+  <div class="card-body flex items-center">
+    <h2 class="card-title">Sign Up</h2>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "space-y-4 bg-white p-6 rounded-lg shadow-lg w-full max-w-md mx-auto" }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="form-control">
+        <%= f.label :email, class: "label font-semibold mb-1" %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "input input-bordered w-full" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="form-control">
+        <%= f.label :password, class: "label font-semibold mb-1" %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password", class: "input input-bordered w-full" %>
+      </div>
+
+      <div class="form-control">
+        <%= f.label :password_confirmation, class: "label font-semibold mb-1"  %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "input input-bordered w-full"  %>
+      </div>
+
+      <%= f.submit "Sign up", class: "btn btn-primary w-full mt-4" %>
+
+    <% end %>
+    <div class="p-5">
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
