i didn't do a second navbar lol

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
       <p class="mb-5">
         Instantly generate song arrangements tailored to your sound so you can create more finished tracks.
       </p>
-      <button class="btn btn-primary">Get Started</button>
+      <button class="btn btn-primary">Try Free</button>
     </div>
   </div>
 </div>
