--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar fixed top-0 left-0bg-base-100">
   <div class="flex-1">
-    <%= link_to "SoundVault", root_path, class:"text-xl font-semibold ms-1" %>  </div>
+    <%= link_to "BluePrint", root_path, class:"text-xl text-primary font-semibold ms-1" %>  </div>
   <div class="flex-none">
     <% if user_signed_in? %>
 			<%= link_to "Logout", destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "btn btn-primary btn-outline" %>
