--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<div class="container mx-auto min-h-screen flex p-10 justify-center">
-  <div class="card-body flex items-center">
+<div class="container mx-auto min-h-screen flex p-10">
+  <div class="card-body flex items-center justify-center">
     <h2 class="card-title">Sign Up</h2>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "space-y-4 bg-white p-6 rounded-lg shadow-lg w-full max-w-md mx-auto" }) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
